--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,11 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <title>title</title>
-    <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">  
+    <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">
   </head>
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
+    <form method='post' action='/sessions'>
+      <input type='text' name='name'>
+      <input type='text' name='email'>
+      <input type='text' name='password'>
+      <input type='submit' id='submit' value="Log In">
+    </form>
 
   </body>
 </html>
