--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -7,7 +7,7 @@
   </head>
   <body id="page-top">
     <% if Helpers.is_logged_in?(session) %>
-      <h1>Welcome, <%= Helpers.current_user(session).username %>!"</h1>
+      <h1>Welcome <%= Helpers.current_user(session).username %></h1>
       <h1>Your balance is <%= Helpers.current_user(session).balance %></h1>
     <% else %>
       <a href="/">Home</a>
